<resources>
    <string name="app_name">어람중학교</string>
    <string name="title_activity_setting">설정</string>
    <string name="title_activity_time_table">시간표</string>
    <string name="title_activity_time_table_set">시간표 설정</string>
    <string name="title_activity_help">도움말</string>

    <string name="infoname">어람중학교 Application</string>
    <string name="info">Made By 선민재\n문의 : ddol0225@naver.com</string>

    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="Weekend">주말</string>

    <string name="wait">로딩중..</string>
    <string name="failed">로딩 실패</string>
    <string name="nomeal">급식 로딩 실패</string>
    <string name="nosch">일정 로딩 실패</string>
    <string name="preparing">준비중..</string>

    <string name="todaymeal">오늘의 급식</string>
    <string name="tomorrowm">내일의 급식</string>
    <string name="todaysch">오늘의 일정</string>
    <string name="tomorrow">내일의 일정</string>
    <string name="notice">최근 공지사항</string>

    <string name="homepage">학교 홈페이지</string>
    <string name="redown">데이터 초기화하기</string>
    <string name="setting">설정</string>
    <string name="returnmain">돌아가기</string>
    <string name="help">도움말</string>

    <string name="download_start">새로운 급식과 학사정보 데이터를 다운로드하고 있습니다. 인터넷을 끊지 마시기 바랍니다.</string>
    <string name="re_download_start">급식과 학사정보 데이터를 다시 다운로드하고 있습니다. 인터넷을 끊지 마시기 바랍니다.</string>
    <string name="internet_error">인터넷에 연결되지 않아 정보를 가져올 수 없습니다. 인터넷에 연결해주세요.</string>
    <string name="data_reset">데이터 재설정중입니다. 인터넷을 끊지 마시기 바랍니다.</string>
    <string name="share_error">급식 정보가 없어서 공유할 수 없습니다.</string>

    <string name="mealalarmchk">급식 알람 켜기</string>
    <string name="schalarmchk">일정 알람 켜기</string>
    <string name="mealalarmtime">급식 알람 시간 설정</string>
    <string name="schalarmtime">일정 알람 시간 설정</string>
    <string name="todayalarmset">오늘 기준 알림</string>
    <string name="tomoalarmset">내일 기준 알림</string>

    <string name="notime">시간표 설정 안됨</string>
    <string name="Al">* 알레르기 정보\n①난류 ②우유 ③메밀 ④땅콩 ⑤대두 ⑥밀 ⑦고등어 ⑧게 ⑨새우 ⑩돼지고기 ⑪복숭아 ⑫토마토 ⑬아황산염</string>

    <string name="alarmon">알람 작동 설정</string>
    <string name="alarmdate">알람 기준 설정</string>

    <string name="HelpTitle1">데이터 초기화</string>
    <string name="HelpContent1">만약, 데이터를 초기화 해야한다는 알림이 뜨면,\n메인 상단에 위치한 메뉴에서 초기화를 진행해주세요.\n하지 않으시면 정상적인 사용이 불가능합니다!</string>

    <string name="ParsingError">데이터에 문제가 발생했습니다!\n메뉴에서 데이터 초기화를 진행해주세요.</string>

</resources>
